--- a/marcela.css
+++ b/marcela.css
@@ -32,16 +32,20 @@ ul {
     text-align: center;
 }
 @media(max-width: 410px) {
-    body{
-        background-color: white;
-    }
+   h1{
+    color: red;
+   }
     p{
         font-style: oblique;
+        color: red;
     }
 }
 @media(max-width:600px) {
     h1{
         color: blue;
         font-style: italic;
+    }
+    p{ 
+        color: blue;
     }
 }
